--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     max-height: 100vh;
+    margin: 0px;
 }
 
 .up-section {
@@ -12,36 +13,44 @@ body {
 .nav {
     display: flex;
     justify-content: center;
-    border: 1px black dashed;
-    /* text-align: center; */
+    background-color: black;
     height: 30px;
 }
 
 /* this is nav buttons group */
 .nav-buttons-group {
+    width: 450px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    width: 300px;
 }
 
-.nav-buttons li {
-    display: inline;
+.nav-buttons-group li {
+    list-style-type: none;
+    color: white;
+    font-size: 15px;
+}
+
+.nav-buttons-group li:hover {
+    list-style-type: none;
+    color: cyan;
+    font-size: 20px;
 }
 
 .hero {
-    border: 1px black dashed;
     text-align: center;
     height: 180px;
+    background-image: url("https://plus.unsplash.com/premium_photo-1667912925305-629794bdb691?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8YmFubmVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=800&q=60");
+    background-size: cover;
 }
 
 .main-section {
-    border: 1px black dashed;
     text-align: center;
-    height: 110px;
+    height: 100%;
 }
 
 .footer {
-    border: 1px black dashed;
     text-align: center;
     height: 80px;
+    background-color: lightgrey;
 }
